k8s_manifests/notejam-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: notejam-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
        - name: notejam-con
          image: voltronops/notejam:2.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
