k8s_manifests/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-con
  template:
    metadata:
      labels:
        app: postgres-con
    spec:
      containers:
        - name: postgres-container
          image: postgres:8.4.22
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-pv
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-claim
