k8s_manifests/note-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-service
spec:
  selector:
    app: notejam
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
