k8s_manifests/notejam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notejam-service
spec:
  selector:
    app: notejam
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  type: ClusterIP
