k8s_manifests/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres-con
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
