k8s_manifests/note-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: note-ingress
spec:
  rules:
    - host: notejam.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: note-service
                port:
                  number: 8000
